--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "googleapis": "^148.0.0",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "puppeteer": "^24.7.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "ws": "^8.18.1"
